- Kategorien können in einer Gruppe zusammengefasst werden.
- Über die Benutzerverwaltung kann beim Erstellen eines neuen Benutzerkontos
  direkt eine neue persönliche Kategorie im Digital Asset Management Modul
  für diesen Benutzer erstellt werden.
- Kopierfunktion für Downloads.
- Die effektiven Zugriffsberechtigungen einer Benutzergruppe oder Benutzers
  können angezeigt werden.
- Neuer Platzhalter DOWNLOADS_FILE_MD5 für die Ausgabe der MD5 Summe eines
  Downloads.
- Der Block "Verwandte Downloads" (downloads_related_file_list) unterstützt
  die gleichen Platzhalter wie bei der Detailseite eines Downloads.
- Für die Erfassung der Beschreibung eines Downloads oder Kategorie steht ein
  WYSIWYG-Editor zur Verfügung.
- Beim Hinzufügen eines Downloads kann ein Benachrichtigungs-E-Mail an
  ausgewählte Benutzergruppen versendet werden.
- Die Auflistung der einer Gruppe zugeordneten Kategorien erfolgt entweder
  alphabetisch oder nach einer benutzerdefinierten Reihenfolge.

Modul: Dokumenten System
- Uhrzeit- (nicht nur Datums-) gesteuerte Veröffentlichung von Dokumenten.

Modul: Mediathek
- Das Modul Podcast wurde in Mediathek umbenannt.
- Der Begriff "Kategorie" wurde umbenannt in "Rubrik".
- Mit dem Layout Template [[PODCAST_VIDEO]] (podcast_video.html) kann ein
  ausgewähltes Medium an beliebiger Stelle im Layout dargestellt werden.
- Das Frontend, sowie das Backend verfügt über eine Volltextsuche.
- Der Block podcast_latest ermöglicht die Auflistung der neusten Zugänge in
  der Mediathek.
- Versand von Empfehlungen per E-Mail.
- WYSIWYG-Editor bei der Beschreibung eines Mediums.
- Shortcut zum (De)Aktivieren eines Mediums bei der Übersichtsseite im Backend.

Modul: Shop
- Bilder können von einem Produkt wieder entfernt werden.

Modul: Block
- Kategorien im Backend ermöglichen eine bessere Übersicht der Blöcke
- Zeitgesteuertes Anzeigen von Blöcken

FCKEditor => CKEDITOR
- Der FCKEditor heisst neu CKEDITOR und wurde komplett neu geschrieben und