@@ -89,6 +89,7 @@
                     <input type="checkbox" name="downloads_settings_attribute_license" id="downloads_settings_attribute_license" value="1" {DOWNLOADS_SETTINGS_ATTRIBUTE_LICENSE_CHECKED} /> <label for="downloads_settings_attribute_license">{TXT_DOWNLOADS_LICENSE}</label> <br />
                     <input type="checkbox" name="downloads_settings_attribute_version" id="downloads_settings_attribute_version" value="1" {DOWNLOADS_SETTINGS_ATTRIBUTE_VERSION_CHECKED} /> <label for="downloads_settings_attribute_version">{TXT_DOWNLOADS_VERSION}</label> <br />
                     <input type="checkbox" name="downloads_settings_attribute_author" id="downloads_settings_attribute_author" value="1" {DOWNLOADS_SETTINGS_ATTRIBUTE_AUTHOR_CHECKED} /> <label for="downloads_settings_attribute_author">{TXT_DOWNLOADS_AUTHOR}</label> <br />
+                    <input type="checkbox" name="downloads_settings_attribute_origin" id="downloads_settings_attribute_origin" value="1" {DOWNLOADS_SETTINGS_ATTRIBUTE_ORIGIN_CHECKED} /> <label for="downloads_settings_attribute_origin">{TXT_DOWNLOADS_ORIGIN}</label> <br />
                     <input type="checkbox" name="downloads_settings_attribute_website" id="downloads_settings_attribute_website" value="1" {DOWNLOADS_SETTINGS_ATTRIBUTE_WEBSITE_CHECKED} /> <label for="downloads_settings_attribute_website">{TXT_DOWNLOADS_WEBSITE}</label> <br />
                 </td>
             </tr>
